aded basic socket.io support

--- a/ers/ersclient/public/index.html
+++ b/ers/ersclient/public/index.html
@@ -19,6 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--
+      socket.io client connection
+    -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <title>React App</title>
   </head>
   <body>
