--- a/ers/ersclient/public/index.html
+++ b/ers/ersclient/public/index.html
@@ -40,5 +40,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type='text/javascript'>
+      console.log(io.connect('http://localhost:3000'));
+    </script>
   </body>
 </html>
